--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = "dynacal"
-include ':lib', ':application', ':api'
+include ':lib', ':application', ':api', ':calplugins-repeat'
 
