Added the subproject as a dependency to the application subproject.

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -9,6 +9,7 @@ repositories {
 dependencies {
     implementation project (':lib')
     implementation project (':api')
+    implementation project (':calplugins-repeat')
 }
 
 application {
