Created a subproject called 'calplugins-notify' and added it dependencies.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = "dynacal"
-include ':lib', ':application', ':api', ':calplugins-repeat'
+include ':lib', ':application', ':api', ':calplugins-repeat', ':calplugins-notify'
 
