--- a/application/build.gradle
+++ b/application/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation project (':lib')
     implementation project (':api')
     implementation project (':calplugins-repeat')
+    implementation project (':calplugins-notify')
 }
 
 application {
