--- a/application/build.gradle
+++ b/application/build.gradle
@@ -1,9 +1,15 @@
 plugins {
+    id 'java'
     id 'application'
+    id 'pmd'
 }
 
 repositories {
     mavenCentral()
+}
+
+compileJava {
+    options.compilerArgs << "-Xlint:all,-serial"
 }
 
 dependencies {
@@ -15,4 +21,12 @@ dependencies {
 
 application {
     mainClass = 'edu.curtin.dynacal.app.Main'
+}
+
+pmd {
+    consoleOutput = true
+    toolVersion = '6.55.0'
+    rulesMinimumPriority = 5
+    ruleSets = []
+    ruleSetFiles = files('saed-pmd-rules.xml')
 }
