--- a/calplugins-repeat/build.gradle
+++ b/calplugins-repeat/build.gradle
@@ -1,11 +1,25 @@
 plugins {
+    id 'java'
     id 'java-library'
+    id 'pmd'
 }
 
 repositories {
     mavenCentral()
 }
 
+compileJava {
+    options.compilerArgs << "-Xlint:all,-serial"
+}
+
 dependencies {
     implementation project (':api')
+}
+
+pmd {
+    consoleOutput = true
+    toolVersion = '6.55.0'
+    rulesMinimumPriority = 5
+    ruleSets = []
+    ruleSetFiles = files('saed-pmd-rules.xml')
 }
