--- a/application/build.gradle
+++ b/application/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.python:jython-standalone:2.7.3'
     implementation project (':lib')
     implementation project (':api')
     implementation project (':calplugins-repeat')
