--- a/calplugins-notify/build.gradle
+++ b/calplugins-notify/build.gradle
@@ -14,6 +14,8 @@ compileJava {
 
 dependencies {
     implementation project (':api')
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 pmd {
@@ -22,4 +24,9 @@ pmd {
     rulesMinimumPriority = 5
     ruleSets = []
     ruleSetFiles = files('saed-pmd-rules.xml')
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
+    testLogging.showStandardStreams = true
 }
